@@ -4,21 +4,28 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-        <groupId>se.europeanspallationsource</groupId>
-        <artifactId>xaos</artifactId>
-	    <version>0.4.0-SNAPSHOT</version>
-    </parent>
+		<groupId>se.europeanspallationsource</groupId>
+		<artifactId>xaos</artifactId>
+		<version>0.4.0-SNAPSHOT</version>
+	</parent>
 
 	<artifactId>xaos.ui.plot</artifactId>
-    <packaging>jar</packaging>
-    <name>XAOS - Plot</name>
+	<packaging>jar</packaging>
+	<name>XAOS - Plot</name>
 	<description>
 		JavaFX-based controls and tools for plotting data into a graph.
 	</description>
-    <url>https://github.com/ESSICS/XAOS</url>
+	<url>https://github.com/ESSICS/XAOS</url>
 
-    <build>
-        <plugins>
+	<properties>
+		<!-- Dependencies Versions -->
+		<commons-math3.version>3.6.1</commons-math3.version>
+		<javafx.version>11.0.2</javafx.version>
+		<xaos.version>${project.version}</xaos.version>
+	</properties>
+
+	<build>
+		<plugins>
 			<!-- ALPHABETICALLY SORTED BY groupId:artifactId -->
 			<plugin>
 				<groupId>com.github.ferstl</groupId>
@@ -28,7 +35,61 @@
 					<customStyleConfiguration>${project.basedir}/../doc/maven-dependencies.json</customStyleConfiguration>
 				</configuration>
 			</plugin>
-        </plugins>
-    </build>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<compilerArgs>
+						<arg>--add-exports=javafx.controls/com.sun.javafx.charts=xaos.ui.plot</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<dependencies>
+
+		<!-- JavaFX - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-base</artifactId>
+			<version>${javafx.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>${javafx.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>${javafx.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>${javafx.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-swing</artifactId>
+			<version>${javafx.version}</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Apache - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>${commons-math3.version}</version>
+			<scope>compile</scope>
+		</dependency>
+
+	</dependencies>
 
 </project>
